# nmod-wiki

./: .gitignore  .pre-commit-config.yaml  CNAME  MANIFEST.in  README.md  contributing.html  datasheets.html  genindex.html  glossary.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: bot.yaml  doc.yaml  pytest.yaml  stubs.yaml
_downloads/47d5cadb3294b342d3d7c9b46acc2465/: precise_audio.ipynb
_downloads/49f80d834377661287b94f28d7832e8e/: precise_audio.py
_sources/: datasheets.rst.txt  glossary.rst.txt  sg_execution_times.rst.txt
_sources/api/: index.rst.txt  logging.rst.txt
_sources/emg/: index.rst.txt
_sources/tes/: guidelines.rst.txt  index.rst.txt
_sources/tms/: guidelines.rst.txt  index.rst.txt
_static/css/: style.css
api/: index.html  logging.html
doc/: conf.py  contributing.rst  datasheets.rst  glossary.rst  guidelines.rst  guidelines_tms.rst  index.rst  links.inc  piloting.rst  sg_execution_times.rst
doc/_templates/autosummary/: class.rst
doc/api/: index.rst
doc/devices/: index.rst  magstim-bistim.rst  magstim-super-rapid-plus.rst
doc/emg/: noraxon.rst
doc/tes/: index.rst  neuroconn.rst  rehamove3.rst  starstim.rst
doc/tms/: guidelines.rst  index.rst  magstim-bistim.rst  magstim-super-rapid-plus.rst  piloting.rst
emg/: index.html  noraxon.html
nmod_wiki/utils/: _checks.py  _docs.py  config.py  logs.py
nmod_wiki/utils/tests/: test_logs.py
resources/map-h4/: map-h4.odp
tes/: guidelines.html  index.html  neuroconn.html  rehamove3.html  starstim.html
tms/: guidelines.html  index.html  magstim-bistim.html  magstim-super-rapid-plus.html
tools/: stubgen.py
tutorials/: 00_logging.py  precise_audio.py
