[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'click',
  'numpy>=1.21',
  'packaging',
  'psutil',
]
description = 'Wiki for the neuromodulation platform at the Fondation Campus Biotech Geneva.'
keywords = [
  'neuromodulation',
  'neuroscience',
  'neurostimulation',
  'python',
  'wiki',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'nmod_wiki'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'nmod_wiki[build]',
  'nmod_wiki[doc]',
  'nmod_wiki[stubs]',
  'nmod_wiki[style]',
  'nmod_wiki[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'furo',
  'intersphinx_registry',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = [
  'nmod_wiki[all]',
]
stubs = [
  'mypy',
  'ruff>=0.6.0',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
nmod-wiki = 'nmod_wiki.commands.main:run'

[project.urls]
documentation = 'https://github.com/fcbg-hnp-meeg/nmod-wiki'
homepage = 'https://github.com/fcbg-hnp-meeg/nmod-wiki'
source = 'https://github.com/fcbg-hnp-meeg/nmod-wiki'
tracker = 'https://github.com/fcbg-hnp-meeg/nmod-wiki/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,.venv'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/nmod_wiki/_version.py',
  '**/nmod_wiki/utils/_fixes.py',
  '**/tests/**',
]

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88
target-version = 'py39'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']


[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100', # 'Missing docstring in public module'
  'D104', # 'Missing docstring in public package'
  'D107', # 'Missing docstring in __init__'
  'UP007', # 'Use `X | Y` for type annotations', requires python 3.10
  'UP038', # 'Use X | Y in {} call instead of (X, Y)', requires python 3.10
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']
'tutorials/*' = ['B018', 'D205', 'D400', 'E402', 'T201']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["nmod_wiki.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['nmod_wiki*tests']
include = ['nmod_wiki*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
